# 2-chatting-with-ollama

./: .gitignore  README.md  pytest.ini
.devcontainer/: devcontainer.json
olaris-tools/: docopts.md  opsfile.yml  pyproject.toml  user.py  welcome.py
olaris-tools/profile_default/startup/: 00-chdir.py
tests/: conftest.py  conftests.py
tests/exercise/: test_chat.py  test_chat_int.py  test_exercise_chat.py  test_exercise_chat_int.py  test_exercise_models.py  test_exercise_models_int.py  test_models.py  test_models_int.py
tests/ollama/: test_chat.py  test_models.py  test_models_int.py
tests/solution/: test_chat.py  test_chat_int.py  test_models.py  test_models_int.py  test_solution_chat.py  test_solution_chat_int.py  test_solution_models.py  test_solution_models_int.py
web/: index.html
web/_app/: version.json
web/_app/immutable/assets/: 0.2Qxme7EM.css  0.DQQD6s4m.css  0.DuJH1tpz.css  0.DzjKhYAo.css  0.cB8-O9j2.css  8.BUhqwwpf.css  _layout.7uZVNBmg.css  _layout.Cm0b--lD.css  _layout.Cw7yuT0S.css  _layout.DCxa4uqV.css  _layout.DxwhngXw.css  display.2uo_IrU4.css  display.C-upjPy8.css
web/_app/immutable/chunks/: -87YKo28.js  -GqkvUNy.js  0AhdZ6Rv.js  0QG3kOPV.js  0_g0tt5R.js  13yr6GuD.js  33Q76TvM.js  4176nlKj.js  67zmxazh.js  7Igy2R3x.js  7cevignt.js  7edFpiSR.js  9WjV9Bg-.js  9ZS1XouS.js  AUiXKgTk.js  B-64lmIa.js  B-sGwRwo.js  B0Do4AqS.js  B0QrjOWm.js  B17K7VLW.js  B18gOvuF.js  B1EVCfSy.js  B1ExNYmx.js  B1WIKL3N.js  B3H1sOlw.js  B3UNm8Wq.js  B3ebYzdz.js  B3mOe3lI.js  B4Xu2OZy.js  B4YtdkJb.js  B4ddDAZb.js  B4pasn2b.js  B5-4YkY9.js  B56Ftz24.js  B671-Yzo.js  (+384 more)
(+620 files in other folders)
