[project]
name = "olaris-tools"
version = "0.1.0"
description = "Tools"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=4.3.0",
    "ipython>=9.4.0",
    "openai>=1.97.1",
    "prompt-toolkit>=3.0.51",
    "pytest>=8.4.1",
    "pytest-pythonpath>=0.7.3",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
]
